Update SpringBoot parent